# brokebutthrivingg

./: .gitignore  README.md  pyproject.toml  start-all.ps1
docs/: dataset-sourcing.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.tsx  index.css
frontend/src/components/Dock/: Dock.css  Dock.tsx
frontend/src/components/FallingText/: FallingText.css  FallingText.tsx
frontend/src/components/FloatingEmojis/: FloatingEmojis.css  FloatingEmojis.tsx
frontend/src/components/Galaxy/: Galaxy.tsx
frontend/src/components/GlitchText/: GlitchText.css
frontend/src/components/LogoLoop/: LogoLoop.css  LogoLoop.tsx
frontend/src/components/MagicBento/: MagicBento.css  MagicBento.tsx
frontend/src/components/ThrillingExperience/: AudioEngine.ts  ExperienceHUD.tsx  ParticleCanvas.tsx  ThrillingExperience.css  ThrillingExperience.tsx
frontend/src/lib/: api.ts
frontend/src/pages/: ChatPage.tsx  DashboardPage.css  DashboardPage.tsx  InsightsPage.tsx  LogPage.tsx  OnboardingPage.tsx  SettingsPage.tsx
frontend/src/types/: api.ts
src/brokebutthriving/: __init__.py
src/brokebutthriving.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/brokebutthriving/api/: main.py
src/brokebutthriving/api/routes/: chat.py  finance.py  gamification.py  models.py  participants.py
src/brokebutthriving/core/: config.py  database.py
src/brokebutthriving/ml/: __init__.py  bls_cex.py  build_bls_spend_sequences.py  build_public_benchmark.py  dataset.py  export.py  features.py  ingest_bls_cex.py  ingest_fwb.py  ingest_mem.py  ingest_shed.py  models.py  public_data.py  train.py  train_public_benchmarks.py  train_spend_sequences.py
src/brokebutthriving/models/: entities.py
src/brokebutthriving/schemas/: api.py
src/brokebutthriving/services/: agent.py  analytics.py  categorizer.py  model_registry.py
tests/ml/: test_bls_spend_sequences.py  test_train_public_benchmarks.py
tests/services/: test_model_registry.py
